# rescue-robot-system

./: .cursorrules  .env.example  .gitignore  AGENT_GUIDELINES.md  README.md  docker-compose.yml  launch_all.ps1  pyproject.toml  requirements.txt  run_mvp.py  send_test_frame.py  send_video_file.py  send_video_file_webrtc.py  send_video_webrtc.py  verify_types.py  webrtc_diagnostic.py
config/profiles/: dev-windows-local.yaml
docs/: AI_AGNOSTIC_HARNESS_REVIEW.md  ARCHITECTURE.md  CODE_READING_AND_VERIFICATION.md  GLOSSARY.md  UI_DRIVEN_TEST_HARNESS_VALIDATION.md
docs/dev-state/: implementation_plan.md  task.md  walkthrough.md
docs/rescue_robot/: dependency_direction_plan.md  deployment_environment_spec.md  detailed_interface_schema.md  detailed_test_case_spec.md  deterministic_validation_plan.md  environment_profile_plan.md  final_verification_report.md  function_unit_test_plan.md  implementation_roadmap.md  implementation_start_check_result.md  integration_plan.md  interface.md  interface_baseline_freeze.md  layer_tdd_harness_matrix.md  mission_creation_plan.md  multi_device_workflow.md  operation_plan.md  pre_implementation_checklist.md  project_master_plan.md  quality_lint_plan.md  raci_matrix.md  requirements_spec.md  risk_management_plan.md  ros_layering_plan.md  safety_sop.md  sdd.md  security_plan.md  test_plan.md  traceability_matrix.md  video_feed_test_guide.md  wbs_schedule.md
go_core/: go.mod  go.sum
react_ui/: index.html  package-lock.json  package.json
react_ui/src/: App.tsx  index.css
src/: __init__.py
src/api/: __init__.py  deps.py  schemas.py  (+8 more)
(+159 files in other folders)
